force-app/main/default/objects/sked_Role_Time_Variance__c/sked_Role_Time_Variance__c.object-meta.xml
<CustomObject>
    <label>Role Time Variance</label>
    <nameField>
        <displayFormat>RTV-{000000}</displayFormat>
        <label>Role Time Variance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Role Time Variances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>