force-app/main/default/objects/sked_Role_Time_Variance__c/fields/sked_Collection_Operation_Name__c.field-meta.xml
<CustomField>
    <fullName>sked_Collection_Operation_Name__c</fullName>
    <formula>sked_Location__r.sked_Collection_Operation_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collection Operation Name</label>
    <type>Text</type>
</CustomField>