force-app/main/default/objects/sked_Role_Time_Variance__c/fields/sked_Days_Of_Week__c.field-meta.xml
<CustomField>
    <fullName>sked_Days_Of_Week__c</fullName>
    <label>Days Of Week</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Days_of_Week</valueSetName>
    </valueSet>
</CustomField>