force-app/main/default/objects/sked_Role_Time_Variance__c/fields/sked_Drive__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Drive</label>
    <referenceTo>sked_Drive__c</referenceTo>
    <relationshipLabel>Role Time Variances</relationshipLabel>
    <relationshipName>sked_Role_Time_Variances</relationshipName>
    <type>Lookup</type>
</CustomField>