force-app/main/default/objects/sked_Role_Time_Variance__c/fields/sked_Effective_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_Effective_Start_Date__c</fullName>
    <label>Effective Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>