force-app/main/default/objects/sked_Role_Time_Variance__c/fields/sked_Location__c.field-meta.xml
<CustomField>
    <fullName>sked_Location__c</fullName>
    <label>Location</label>
    <referenceTo>sked__Location__c</referenceTo>
    <relationshipLabel>Role Time Variances</relationshipLabel>
    <relationshipName>sked_Role_Time_Variances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>