force-app/main/default/objects/sked_Role_Time_Variance__c/fields/sked_Variance_Applies_to__c.field-meta.xml
<CustomField>
    <fullName>sked_Variance_Applies_to__c</fullName>
    <label>Variance Applies to</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>sked_Variation_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead Time</fullName>
            </value>
            <value>
                <fullName>Setup Time</fullName>
            </value>
            <value>
                <fullName>Breakdown Time</fullName>
            </value>
            <value>
                <fullName>Wrap-up Time</fullName>
            </value>
            <value>
                <fullName>Travel Time To</fullName>
            </value>
            <value>
                <fullName>Travel Time From</fullName>
            </value>
            <value>
                <fullName>Site Logistics To</fullName>
            </value>
            <value>
                <fullName>Site Logistics Back</fullName>
            </value>
            <value>
                <fullName>Set Up Time</fullName>
                <isActive>false</isActive>
                <label>Set Up Time</label>
            </value>
            <value>
                <fullName>Site Logistics From</fullName>
                <isActive>false</isActive>
                <label>Site Logistics From</label>
            </value>
            <value>
                <fullName>Travel Time</fullName>
                <isActive>false</isActive>
                <label>Travel Time</label>
            </value>
            <value>
                <fullName>Wrap Up</fullName>
                <isActive>false</isActive>
                <label>Wrap Up</label>
            </value>
            <value>
                <fullName>Wrap-up</fullName>
                <isActive>false</isActive>
                <label>Wrap-up</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>