force-app/main/default/objects/sked_Role_Time_Variance__c/fields/sked_Variation_Amount__c.field-meta.xml
<CustomField>
    <fullName>sked_Variation_Amount__c</fullName>
    <label>Variation Amount (minutes)</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>