force-app/main/default/objects/sked_Role_Time_Variance__c/fields/sked_Variation_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>sked_Variation_Type_Other__c</fullName>
    <label>Variation Type Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>